--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=dogwalking
 yandex.maps.api.key=c46e557a-0817-4774-9658-1922a0499a6a
 yandex.maps.api.base-url=https://geocode-maps.yandex.ru/1.x
+
+dog.breeds.api.base-url=https://registry.dog
+dog.breeds.api.path=/api/v1
+
 server.port=8080
+
